--- a/nodes/locales/en-US/server.json
+++ b/nodes/locales/en-US/server.json
@@ -2,12 +2,7 @@
     "label": {
         "base_topic": "Base topic",
         "name": "Name",
-        "host": "Host",
-        "mqtt_port": "MQTT Port",
-        "mqtt_username": "MQTT Username",
-        "mqtt_password": "MQTT Password",
-        "use-tls": "Use TLS",
-        "tls-config":"TLS configuration"
+        "broker": "Server"
     },
     "placeholder": {
         "name": "Name"
